--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game First</title>
+    <title>Game First1</title>
 </head>
 
 
@@ -17,6 +17,7 @@
     <div class="conteiner"></div>
     <div class="class1">Game End</div>
     <div class="dev">Add container dev</div>
+    <div class="ridfd">dfdfd</div>
 </body>
 
 </html>
